package policy_gradient_problems.agent_interfaces;

public interface AgentNeuralActorNeuralCriticI<V>  extends AgentI<V>, NeuralActor<V>, NeuralCriticI<V> {
}
